fixed tutor/student dashboard, edit account dashboard, aligned sidenav and reduced whitespace

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -54,6 +54,7 @@
   height: 100vh;
   border-right: solid 1px black;
   position: fixed;
+  width: 15%;
   a {
     color: black;
     font-size: 1.3rem;
